# peak-mas

./: .gitignore  CODE_OF_CONDUCT.md  DOCS.md  Dockerfile  Makefile  README.md  compose.yaml  env.yml  environment.yml  exemplo_3agentes.py  how-to.md  package-lock.json  package.json  prosody.cfg.lua  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code_lint_format.yml  codeql-analysis.yml
docker/: Dockerfile  README.md  compose.dev.yaml  compose.yaml
docker/dockerfiles/: server.Dockerfile
docs/: Gemfile  architecture_design.drawio  foreword.md  glossary.md  how-to.md  index.md  installation.md  prerequistites.md  publications.md  xmpp_config.md
docs/_includes/: head-costum.html
docs/_site/: diagrams.excalidraw  foreword.md  glossary.md  index.md  installation.md
examples/: exemplo_basico.py  test.ipynb
examples/1_simple_agent/: agent.py
examples/2_multi_agent_system/: mas.yaml
examples/2_multiagent_system/: mas.yaml  receiver.py  sender.py
examples/3_simple_community/: README.md  agent.py
examples/4_community_tags/: agent.py
examples/5_community_hierarchy/: README.md  agent.py
examples/6_file_transfer/: dataset.txt  downloader.py  uploader.py
examples/agent_execution/: agent.py  agents.yml  start.txt
examples/chalenge_2/: mas.yaml  searcher.py  tagger.py
examples/data_abstraction/: agent.py
examples/data_extraction/: agent.py  graph_options.json  output.json
examples/data_integration/: dataset.py
examples/dataset/: agent.py  dataset.py  start.txt  texts.txt
examples/logging_system/: example.py
mas/: __init__.py  __main__.py  agent.py  base.py  behaviour.py  config.py  dataset.py  drivers.py  jid.py  message.py  properties.py  simulation.py
peak/: __init__.py  __main__.py  agents.py  behaviours.py  bootloader.py  core.py  df.py  drivers.py  properties.py  simulation.py
(+184 files in other folders)
